--- a/assets/css/material-kit.css
+++ b/assets/css/material-kit.css
@@ -5402,7 +5402,12 @@ button.close {
     position: relative;
     width: 100%;
     overflow: hidden;
-}
+} 
+
+
+
+
+
 
 .carousel-item {
     position: relative;
@@ -5412,12 +5417,26 @@ button.close {
     transition: transform 0.6s ease;
     backface-visibility: hidden;
     perspective: 1000px;
-}
+    height: 30%;
+} 
+
+    /* .carousel-item:after {
+    -webkit-box-shadow: inset 0 0 20rem rgba(0, 0, 0, 1);
+    box-shadow: inset 0 0 20rem rgba(0, 0, 0, 1);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    content: "";
+} */
+
 
 .carousel-item.active,
 .carousel-item-next,
 .carousel-item-prev {
-    display: block;
+    display: block; 
+    height: 30%;
 }
 
 .carousel-item-next,
